--- a/updates-2.0.json.tmpl
+++ b/updates-2.0.json.tmpl
@@ -4,8 +4,8 @@
       "updates": [
         {
           "version": "2.0",
-          "update_link": "https://github.com/paudelbasil/zotLibraryDB/raw/main/zotLibDB.zip",
-          "update_hash": "sha256:",
+          "update_link": "https://github.com/paudelbasil/zotLibraryDB/raw/develop_v7/zotLibDB.zip",
+          "update_hash": "",
           "applications": {
             "zotero": {
               "strict_min_version": "7.0"
